spade-tests/src/snapshots/spade_tests__ast_lowering__negative_pipeline_inst_is_disallowed.snap
---
source: spade-tests/src/ast_lowering.rs
---
pipeline(0) y(clk: clock) -> bool {
    true
}
pipeline(0) x(clk: clock) -> bool {
    inst(-1) y(clk)
}

error: Pipeline depth mismatch
  ┌─ testinput:5:10
  │
1 │ pipeline(0) y(clk: clock) -> bool {
  │          - y has depth 0
  ·
5 │     inst(-1) y(clk)
  │          ^^ Expected depth 0, got -1
  │
  = note: Expected: 0
               Got: -1
